--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,43 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
+Brotli==1.0.9
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.7
+click==8.0.3
 cycler==0.10.0
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
+dash==2.0.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.0.2
+Flask-Compress==1.10.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.0.4
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.16.0
-kiwisolver==1.2.0
-MarkupSafe==1.1.1
-matplotlib==3.3.2
-numpy==1.19.2
-pandas==1.1.2
-Pillow==7.2.0
-psycopg2==2.8.6
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.2
+joblib==1.1.0
+kiwisolver==1.3.2
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+numpy==1.21.2
+pandas==1.3.3
+Pillow==8.4.0
+pkg_resources==0.0.0
+plotly==5.3.1
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
 pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.24.0
-scikit-learn==0.23.2
-scipy==1.5.2
-six==1.15.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
+six==1.16.0
 sklearn==0.0
-SQLAlchemy==1.3.19
-threadpoolctl==2.1.0
-urllib3==1.25.10
-Werkzeug==1.0.1
+SQLAlchemy==1.4.25
+tenacity==8.0.1
+threadpoolctl==3.0.0
+urllib3==1.26.7
+Werkzeug==2.0.2
 wincertstore==0.2
