--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,7 @@ services:
     image: postgres:15-alpine
     volumes:
       - "database-volume:/var/lib/postgresql/data"
-    environment:
-      - POSTGRES_PASSWORD=***
-      - POSTGRES_DB=stances2
-      - POSTGRES_USER=postgres
+    env_file: .env
 
 volumes:
   database-volume:
