--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,28 @@
 version: "3.8"
 
 services:
+  nginx:
+    image: nginx:1.25
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
+      - ./nginx/fullchain.pem:/etc/letsencrypt/live/reddit-lean.com/fullchain.pem
+      - ./nginx/privkey.pem:/etc/letsencrypt/live/reddit-lean.com/privkey.pem
+    depends_on:
+      - website
+
   website:
     extends:
       file: docker-compose.yml
       service: website
-    command: gunicorn -b 0.0.0.0:80 app:app
+    command: gunicorn -b 0.0.0.0:8000 app:app
     environment:
       - ENV=prod
-    ports:
-      - "80:80"
+    expose:
+      - 8000
   database:
     extends:
       file: docker-compose.yml
