fix: missing semicolon lol

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name reddit-lean.com
+    server_name reddit-lean.com;
 
     location / {
         rewrite ^ https://$host$request_uri? permanent;
